--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python3.11 -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip3 install -r requirements.txt
     - name: Run Tests
       run: |
-        python manage.py test
+        python3.11 manage.py test
