4-feat/migrate 추가

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,8 +23,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
-        python3.11 -m pip install --upgrade pip
+        python3.11 -m pip3 install --upgrade pip
         pip3 install -r requirements.txt
     - name: Run Tests
       run: |
+        python3.11 manage.py migrate
         python3.11 manage.py test
