--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -7,8 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  continuous-integration:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -28,3 +27,28 @@ jobs:
       run: |
         python3.11 manage.py migrate
         python3.11 manage.py test
+        
+
+  continuous-deployment:
+
+    runs-on: ubuntu-latest
+    needs: [ continuous-integration ]
+
+    steps:
+      # Step 1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+
+      # Step 2
+      - name: Create CodeDeploy Deployment
+        id: deploy
+        run: |
+          aws deploy create-deployment \
+            --application-name django-test-codedeploy \
+            --deployment-group-name django-test-codedeploy-group \
+            --deployment-config-name CodeDeployDefault.OneAtATime \
+            --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
