--- a/appspec.yml
+++ b/appspec.yml
@@ -1,12 +1,20 @@
 version: 0.0
 os: linux
 files:
- - source: .
-   destination: /home/ubuntu/EnvEdu_Django
+  - source: /
+    destination: /home/ubuntu/EnvEdu_Django
+    runas: ubuntu
+    overwrite: yes
+
+permissions:
+  - object: /home/ubuntu/EnvEdu_Django
+    pattern: "**"
+    owner: ubuntu
+    group: ubuntu
+    mode: 755
+
 hooks:
-  BeforeInstall:
-     timeout: 300
-     runas: root
   ApplicationStart:
-   - location: scripts/install_app_dependencies
-     runas: root
+    - location: /scripts/deploy.sh
+      timeout: 90
+      runas: ubuntu
