--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -22,6 +22,29 @@ env:
   
 jobs:
   continuous-integration:
+      runs-on: ubuntu-latest
+      strategy:
+        max-parallel: 4
+        matrix:
+          python-version: [3.11]
+
+      steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Dependencies
+        run: |
+          pip3 install -r requirements.txt
+      - name: Run Tests
+        run: |
+          python3.11 manage.py migrate
+          python3.11 manage.py test
+
+
+
+  continuous-deployment:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
