--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -41,3 +41,35 @@ jobs:
         run: |
           python3.11 manage.py migrate
           python3.11 manage.py test
+          
+  continuous-deployment:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: archive project
+        run: |
+          cd ..
+          pwd
+          ls
+          tar cvfz $PROJECT_NAME.tar.gz $PROJECT_NAME
+          chmod 755 $PROJECT_NAME.tar.gz
+        #aws 접근 id, key
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+
+        # s3에 압축한 jar파일 업로드
+      - name: Upload to S3
+        run: |
+          cd ..
+          aws s3 cp --region ap-northeast-2 $PROJECT_NAME.tar.gz s3://$BUCKET_NAME/$PROJECT_NAME/
+        # s3에 업로드한 파일 code Deploy에서 배포 요청
+        # key는 bucket 안의 디렉토리 이름/파일 이름
+      - name: Code Deploy
+        run: aws deploy create-deployment 
+          --application-name $CODE_DEPLOY_APP_NAME 
+          --deployment-config-name CodeDeployDefault.OneAtATime 
+          --deployment-group-name $DEPLOYMENT_GROUP_NAME 
+          --s3-location bucket=$BUCKET_NAME,bundleType=tgz,key=$PROJECT_NAME/$PROJECT_NAME.tar.gz
